# OurSecretBase

./: .gitignore  GEMMA_INTEGRATION_GUIDE.md  MODEL_SETUP_GUIDE.md  README.md  analysis_options.yaml  pubspec.yaml  quick_run.bat  run_flutter_test.bat  run_flutter_test.ps1  setup_flutter.bat
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native_bridge.cpp
android/app/src/main/kotlin/com/example/our_secret_base/: MainActivity.kt  NativeBridge.kt
android/app/src/main/kotlin/com/ourhideout/app/our_hideout/: MainActivity.kt
assets/images/: README.md
assets/models/: gemma3-270m-it-q4_k_m.gguf
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/screens/: ai_debug_screen.dart  chat_screen.dart  home_screen.dart  model_selection_screen.dart
lib/services/: ai_service.dart  gguf_loader.dart  model_downloader.dart  model_manager.dart  native_bindings.dart  platform_utils.dart
lib/theme/: app_theme.dart
lib/widgets/: custom_app_bar.dart  hideout_card.dart
scripts/: build_native.bat
test/: widget_test.dart
web/: index.html  manifest.json
windows/runner/: native_bridge.h
